builderr.txt
   Compiling rust-mc v0.1.0 (file:///home/jdb/repos/rust-mc)
error[E0271]: type mismatch resolving `<impl futures::Future as futures::IntoFuture>::Error == f3::stm32f30x_hal::serial::Error`
  --> src/main.rs:98:14
   |
98 |             .and_then(|(tx, rx, byte)| write(tx, rx, byte))
   |              ^^^^^^^^ expected enum `void::Void`, found enum `f3::stm32f30x_hal::serial::Error`
   |
   = note: expected type `void::Void`
              found type `f3::stm32f30x_hal::serial::Error`

error[E0599]: no method named `map` found for type `futures::future::AndThen<impl futures::Future, impl futures::Future, [closure@src/main.rs:98:23: 98:59]>` in the current scope
  --> src/main.rs:99:14
   |
99 |             .map(|(tx, rx)| Loop::Continue((tx, rx)))
   |              ^^^
   |
   = note: the method `map` exists but the following trait bounds were not satisfied:
           `futures::future::AndThen<impl futures::Future, impl futures::Future, [closure@src/main.rs:98:23: 98:59]> : futures::Future`
           `&mut futures::future::AndThen<impl futures::Future, impl futures::Future, [closure@src/main.rs:98:23: 98:59]> : futures::Future`
           `&mut futures::future::AndThen<impl futures::Future, impl futures::Future, [closure@src/main.rs:98:23: 98:59]> : core::iter::Iterator`

error: aborting due to 2 previous errors

Some errors occurred: E0271, E0599.
For more information about an error, try `rustc --explain E0271`.
error: Could not compile `rust-mc`.

To learn more, run the command again with --verbose